# Nerfdrone

./: .env.example  .gitignore  README.md  main_control_centre.py  pyproject.toml
nerfdrone/: __init__.py  configuration.py  logging_utils.py
nerfdrone/classification/: __init__.py  classifier.py
nerfdrone/drone_control/: __init__.py  base.py  registry.py
nerfdrone/drone_control/providers/: __init__.py  dji_provider.py
nerfdrone/export/: __init__.py  point_cloud_exporter.py
nerfdrone/finance/: __init__.py  ledger.py
nerfdrone/ingestion/: __init__.py  video_ingestor.py
nerfdrone/interface/: __init__.py  web_app.py
nerfdrone/interface/static/css/: style.css
nerfdrone/interface/static/js/: dashboard.js
nerfdrone/interface/templates/: dashboard.html
nerfdrone/nerf_pipeline/: __init__.py  reconstruction.py
nerfdrone/route_planning/: __init__.py  planner.py
nerfdrone/surveys/: __init__.py  manager.py
nerfdrone/utils/: __init__.py  geojson.py  plugin_loader.py
scripts/: setup_environment.ps1  setup_environment.sh
tests/: __init__.py  test_finance_ledger.py  test_registry.py  test_route_planner.py  test_survey_manager.py
