[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfdrone"
version = "0.1.0"
description = "Modular platform for drone mission planning and NeRF-based reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nerfdrone Contributors"}]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.9",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
nerf = ["nerfstudio>=0.3.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nerfdrone*", "tests*"]
